--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -52,6 +53,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "react-router-dom": "^6.17.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^4.9.5"
   }
